@@ -8,7 +8,7 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>9</integer>
+		<integer>6</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9A581</string>
